Add chilli picture, ingredients and method

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -7,5 +7,46 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Chilli con carne</h1>
+    <img src="images/chilli.jpeg" height="200" width="300">
+    <h2>Ingredients:</h2>
+    <ul>
+       <li> 3x dried ancho chillies, seeds removed and diced</li>
+       <li> 500ml beef stock</li>
+       <li>2 tbsp beef tallow</li>
+        <li> 700g 80/20 beef mince</li>
+        <li>  1 red onion, finely diced</li>
+        <li> 6 cloves garlic, finely diced</li>
+         <li>1 tbsp ground cumin</li>
+        <li>1 tbsp smoked paprika</li>
+        <li>1 tbsp ground coriander seed</li>
+        <li>1 tsp cinnamon</li>
+        <li> 1 tsp cayenne pepper</li>
+        <li> 2 tbsp tomato paste</li>
+        <li> 2 tbsp chipotle in adobo</li>
+        <li> 1 can diced tomatoes</li>
+        <li> 1 tbsp maple syrup</li>
+        <li> 400g cooked black eyed beans</li>
+        <li> salt to taste</li>
+        <li> sour cream and spring onion</li>
+        </ul>
+    <h2>Method:</h2>
+    <ol>
+        <li>Toast the dried ancho chillies in a pan for 2-3 minutes before adding them to a 
+            blender with the beef stock and blending until smooth.</li>
+        <li>In a large pan, heat the beef tallow over medium heat.</li>
+        <li>Add the beef mince then season with salt and cook until browned. Then remove 
+            and set aside.</li>
+        <li>Add the onion and garlic and cook until softened (add some more tallow if you 
+            need to). 5. Add the cumin, smoked paprika, ground coriander seed, cinnamon, 
+            cayenne pepper, tomato paste and chipotle in adobo. Cook for 2-3 minutes.</li>
+        <li>Add the diced tomatoes, beef, ancho chillies in beef stock, maple syrup and a 
+            pinch of salt.</li>
+        <li>Bring to a simmer. Turn to low and cook for 45 minutes with a lid, stirring 
+            often.</li>
+        <li>Add the cooked black eyed beans and cook for another 5 minutes. 9. Season with 
+            salt to taste.</li>
+        <li>Garnish with sour cream and spring onions</li>
+        <li><strong>Enjoy!</strong></li>
+    </ol>>
 </body>
 </html>
