--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -8,6 +8,8 @@
     <a href="../index.html">Home</a>
     <h1>Chilli con carne</h1>
     <img src="images/chilli.jpeg" height="200" width="300">
+    <p>Chili con carne, often shortened to chili, is a spicy stew of Mexican origin containing chili peppers, meat, 
+        tomatoes, and often pinto beans or kidney beans. Other seasonings may include garlic, onions, and cumin.</p>
     <h2>Ingredients:</h2>
     <ul>
        <li> 3x dried ancho chillies, seeds removed and diced</li>
