--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -7,7 +7,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Chilli con carne</h1>
-    <img src="images/chilli.jpeg" height="200" width="300">
+    <img src="images/chilli.jpeg" height="200" width="300" alt="Chilli con carne">
     <p>Chili con carne, often shortened to chili, is a spicy stew of Mexican origin containing chili peppers, meat, 
         tomatoes, and often pinto beans or kidney beans. Other seasonings may include garlic, onions, and cumin.</p>
     <h2>Ingredients:</h2>
