Add Bolognese page and link between home and Bolo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chilli-con-carne.html">Chilli con carne</a>
+    <ul>
+    <li><a href="recipes/chilli-con-carne.html">Chilli con carne</a></li>
+    <li><a href="recipes/bolognese.html">Pasta Bolognese</a></li>
+    </ul>
 </body>
 </html>
