Add hotdog page and link between hotdog and home

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <ul>
     <li><a href="recipes/chilli-con-carne.html">Chilli con carne</a></li>
     <li><a href="recipes/bolognese.html">Pasta Bolognese</a></li>
+    <li><a href="recipes/hotdog.html">Hotdogs</a></li>
     </ul>
+
 </body>
 </html>
